# Kingdom-Madness

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c  todo.md
include/: game_state.h  load_game.h  play_music.h  start_screen.h
include/game/: battle.h  battle_menu.h  enemy.h  game.h  game_state.h  health.h  inventory.h  magic.h  pause.h  save_game.h  score.h  store.h  store_menu.h
include/game/player/: player.h
include/utils/: colors.h  menu.h  render_graph.h  sound_manager.h  sprite.h  standby_window.h
lib/PDCurses/: .gitignore  CMakeLists.txt
lib/PDCurses/cmake/: README.md  gen_config_header.cmake  watcom_open_os2v2_toolchain.cmake
lib/PDCurses/sdl2/: CMakeLists.txt  Makefile.vc
lib/PDCurses/vt/: CMakeLists.txt
lib/PDCurses/wincon/: CMakeLists.txt
lib/SFML/: CMakeLists.txt
lib/SoundBinding/: CMakeLists.txt
lib/SoundBinding/include/: sound.h
lib/SoundBinding/src/: sound.cpp
resources/sound/: licenses.txt
resources/sprites/: ARMOR.txt  CASTLE.txt  PLAYER.txt  POTION.txt  POWER.txt  STORE.txt  STORE_INTERNAL.txt  TITLE.txt  caracteres_utiles.txt  kikkoman.txt  potion.txt
resources/sprites/enemy/: DEVIL.txt  DRAGON.txt  GHOST.txt  REAPER.txt
resources/sprites/map/: BRIDGE.txt  CHAPEL.txt  GRAVEYARD.txt  HOUSE.txt  STORE.txt
resources/sprites/store/: STORE_SELLER.txt  STORE_SIGN.txt
src/: game_data.c  load_game.c  play_music.c  start_screen.c
src/game/: battle.c  battle_menu.c  enemy.c  game.c  game_data.c  health.c  inventory.c  magic.c  pause.c  save_game.c  score.c  store.c  store_menu.c
src/player/: player.c
src/utils/: colors.c  menu.c  render_graph.c  sound_manager.c  sprite.c  standby_window.c
tools/: CMakeLists.txt
tools/save_game_editor/: CMakeLists.txt  main.c
